--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Bootstrap 101 Template</title>
+  <title>Ashli Hanson</title>
 
   <!-- Bootstrap CDN -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -24,13 +24,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="nav navbar-nav navbar-right">
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="../../index.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Portfolio</a>
+          <a class="nav-link" href="../../portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="../../contact.html">Contact</a>
         </li>
       </ul>
     </div>
@@ -40,7 +40,7 @@
     <div class="row">
       <div class="col-md-8">
         <div class="page-header">
-          <h1>About Me</h1>
+          <h1>Hey there!</h1>
         </div>
         <div class="row">
           <div class="col-md-3">
@@ -48,14 +48,7 @@
           </div>
           <div class="col-md-9">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dignissim, felis ut dictum tristique,
-              nibh erat feugiat libero, sit amet fringilla mauris velit in mi. Duis tempus felis vitae
-              felis vulputate pretium. Nullam commodo, est ac auctor ornare, eros nisi fringilla sem,
-              non pulvinar tortor lorem sit amet sem. Aenean quis erat facilisis, porttitor ex cursus,
-              luctus enim. Curabitur et metus in lacus tristique sagittis et in lorem. Nunc id nisi et
-              neque fringilla ultricies. Aenean at feugiat elit, a posuere justo. Pellentesque egestas
-              dolor et nisi venenatis, nec fermentum urna fringilla. Etiam efficitur porta purus, id
-              posuere sem congue a.
+              My name is Ashli Hanson 
             </p>
           </div>
         </div>
@@ -64,9 +57,14 @@
       <div class="col-md-4">
         <div class="card mt-2">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">Where to find me</h5>
+            <p class="card-text">
+                <ul>
+                    <li>LinkedIn</li>
+                    <li>GitHub</li>
+                    <li>Instagram</li>
+                </ul>
+            </p>
           </div>
         </div>
       </div>
