added navbar logo

--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
 <body>
   <!-- Start Nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">
-        <img src="../homework-two/navbarimg.png" style="display: inline-block;">
-        <span style="display: inline-block;">Ashli Hanson</span>
+    <a class="navbar-brand" href="#"> 
+        <img src="../homework-two/navbarimg.png" style="display: inline-block; height: 100px; width: 100px">
+        <span style="display: inline-block;"></span>
       </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,6 +42,7 @@
 
   <header><h1>Let's connect!</h1></header>
 
+  <div class="container-sm">
   <form>
     <div class="form-group">
       <label for="formGroupExampleInput">Name</label>
@@ -54,6 +55,11 @@
       <div class="form-group">
         <label for="formGroupExampleInput3">Message</label>
         <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Drop a line here!"> 
+        <button class="btn btn-primary btn-lg">Send it!</button>
     </div>
-    <button type="button" class="btn btn-warning">Send it!</button>
+    
   </form>
+  </div>
+  
+  </body>
+  </html>
