--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 <body>
   <!-- Start Nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <span class="navbar-brand mb-1 h1">Navbar</span>
+    <a class="navbar-brand" href="#"> 
+      <img src="../homework-two/navbarimg.png" style="display: inline-block; height: 100px; width: 100px">
+      <span style="display: inline-block;"></span>
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
