--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
 
 </head>
 
+
 <body>
   <!-- Start Nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -28,13 +29,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="nav navbar-nav navbar-right">
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link1" href="index.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Portfolio</a>
+          <a class="nav-link2" href="portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link3" href="contact.hmtl">Contact</a>
         </li>
       </ul>
     </div>
