--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Bootstrap CDN -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -27,13 +27,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="nav navbar-nav navbar-right">
         <li class="nav-item">
-          <a class="nav-link" href="../../index.html">About</a>
+          <a class="nav-link1" href="index.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../../portfolio.html">Portfolio</a>
+          <a class="nav-link2" href="portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../../contact.html">Contact</a>
+          <a class="nav-link3" href="contact.html">Contact</a>
         </li>
       </ul>
     </div>
