profile picture added

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
     </div>
       <div class="form-group">
         <label for="formGroupExampleInput3">Message</label>
-        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Drop a line here!"> 
+        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Tell me something good"> 
         <button class="btn btn-primary btn-lg">Send it!</button>
     </div>
     
