--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="row">
           <div class="col-md-3">
-            <img src="http://placehold.it/150x150" alt="Placeholder" class="img-thumbnail">
+            <img src="profile.jpeg" alt="profile" class="img-thumbnail">
           </div>
           <div class="col-md-9">
             <p>
@@ -63,9 +63,8 @@
             <h5 class="card-title">Where to find me</h5>
             <p class="card-text">
                 <ul>
-                    <li>LinkedIn</li>
-                    <li>GitHub</li>
-                    <li>Instagram</li>
+                    <li><a href="https://www.linkedin.com/in/ashli-hanson-2689091b0/" target="_blank">LinkedIn</a></li>
+                    <li><a href="https://github.com/ashlinhanson" target="_blank">GitHub</a></li>
                 </ul>
             </p>
           </div>
