--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
   <!-- Start Nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#"> 
-        <img src="../homework-two/navbarimg.png" style="display: inline-block; height: 100px; width: 100px">
+        <img src="../homework-two/navbarimg.png" style="display: inline-block; height: 75px; width: 75px">
         <span style="display: inline-block;"></span>
       </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -29,13 +29,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="nav navbar-nav navbar-right">
         <li class="nav-item">
-          <a class="nav-link1" href="index.html">About</a>
+          <a class="nav-link" href="index.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link2" href="portfolio.html">Portfolio</a>
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link3" href="contact.hmtl">Contact</a>
+          <a class="nav-link" href="contact.hmtl">Contact</a>
         </li>
       </ul>
     </div>
@@ -43,7 +43,7 @@
 
   <header><h1>Let's connect!</h1></header>
 
-  <div class="container-sm">
+  <div class="container-sm col-sm-8">
   <form>
     <div class="form-group">
       <label for="formGroupExampleInput">Name</label>
@@ -53,7 +53,7 @@
       <label for="formGroupExampleInput2">Email</label>
       <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Example : mscott@dundermifflin.com">
     </div>
-      <div class="form-group">
+      <div class="form-group2">
         <label for="formGroupExampleInput3">Message</label>
         <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Tell me something good"> 
         <button class="btn btn-primary btn-lg">Send it!</button>
