--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Start Nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#"> 
-      <img src="../homework-two/navbarimg.png" style="display: inline-block; height: 100px; width: 100px">
+      <img src="../homework-two/navbarimg.png" style="display: inline-block; height: 75px; width: 75px">
       <span style="display: inline-block;"></span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -27,13 +27,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="nav navbar-nav navbar-right">
         <li class="nav-item">
-          <a class="nav-link1" href="index.html">About</a>
+          <a class="nav-link" href="index.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link2" href="portfolio.html">Portfolio</a>
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link3" href="contact.html">Contact</a>
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
     </div>
@@ -45,14 +45,25 @@
         <div class="page-header">
           <h1>Hey there!</h1>
         </div>
-        <div class="row">
-          <div class="col-md-3">
-            <img src="profile.jpeg" alt="profile" class="img-thumbnail">
-          </div>
-          <div class="col-md-9">
-            <p>
-              My name is Ashli Hanson 
-            </p>
+        <div class="col-md-12">
+          <div class="card mt-2">
+            <div class="card-body">
+              <p class="card-text">
+                <div class="row">
+                  <div class="col-md-5">
+                    <img src="profile.jpeg" alt="profile" class="img-thumbnail">
+                  </div>
+                  <div class="col-md-7">
+                    <p>
+                      My name is Ashli Hanson and I am an aspiring Full Stack web developer! I've spent the majority of my professional career in the service industry and customer service.
+                      Most recently I was a manager for Summer Moon Coffee for 3 years at the Buda and Trailer locations. 
+                      Being a manager in a fast paced environment like a coffee shop really sharpened my problem solving skills and 
+                    </p>
+                  </div>
+                </div>
+         
+              </p>
+            </div>
           </div>
         </div>
       </div>
