card added for contact

--- a/contact.html
+++ b/contact.html
@@ -41,23 +41,36 @@
     </div>
   </nav>
 
-  <header><h1>Let's connect!</h1></header>
-
-  <div class="container-sm col-sm-8">
-  <form>
-    <div class="form-group">
-      <label for="formGroupExampleInput">Name</label>
-      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example : Michael Scott">
-    </div>
-    <div class="form-group">
-      <label for="formGroupExampleInput2">Email</label>
-      <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Example : mscott@dundermifflin.com">
-    </div>
-      <div class="form-group2">
-        <label for="formGroupExampleInput3">Message</label>
-        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Tell me something good"> 
-        <button class="btn btn-primary btn-lg">Send it!</button>
-    </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-10">
+        <div class="page-header">
+        </div>
+        <div class="col-md-12">
+          <div class="card mt-4">
+            <div class="card-body">
+              <p class="card-text">
+                <div class="container-sm col-sm-12">
+                  <h4>Lets Connect! </h4>
+                  <form>
+                    <div class="form-group">
+                      <label for="formGroupExampleInput">Name</label>
+                      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example : Michael Scott">
+                    </div>
+                    <div class="form-group">
+                      <label for="formGroupExampleInput2">Email</label>
+                      <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Example : mscott@dundermifflin.com">
+                    </div>
+                      <div class="form-group2">
+                        <label for="formGroupExampleInput3">Message</label>
+                        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Tell me something good"> 
+                        <button class="btn btn-primary btn-lg">Send it!</button>
+                    </div>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
     
   </form>
   </div>
