corrections from validation service

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
   <!-- Start Nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#"> 
-        <img src="../homework-two/navbarimg.png" style="display: inline-block; height: 75px; width: 75px">
+        <img src="../homework-two/navbarimg.png" style="display: inline-block; height: 75px; width: 75px" alt="logo">
         <span style="display: inline-block;"></span>
       </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -63,17 +63,16 @@
                     </div>
                       <div class="form-group2">
                         <label for="formGroupExampleInput3">Message</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Tell me something good"> 
+                        <input type="text" class="form-control" id="formGroupExampleInput3" placeholder="Tell me something good"> 
                         <button class="btn btn-primary btn-lg">Send it!</button>
-                    </div>
+                      </div>
+                    </form>
                 </div>
             </div>
           </div>
         </div>
-      </div>
-    
-  </form>
+    </div>
   </div>
-  
+</div>
   </body>
   </html>
