--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
   <!-- Start Nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#"> 
-      <img src="../homework-two/navbarimg.png" style="display: inline-block; height: 75px; width: 75px">
+      <img src="../homework-two/navbarimg.png" style="display: inline-block; height: 75px; width: 75px" alt="logo">
       <span style="display: inline-block;"></span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -71,10 +71,12 @@
                     <span class="sr-only">Next</span>
                   </a>
                 </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
 
       <div class="col-md-4">
         <div class="card mt-2">
