--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Start Nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#"> 
-      <img src="../homework-two/navbarimg.png" style="display: inline-block; height: 75px; width: 75px">
+      <img src="../homework-two/navbarimg.png" style="display: inline-block; height: 75px; width: 75px" alt="logo">
       <span style="display: inline-block;"></span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -61,8 +61,6 @@
                     </p>
                   </div>
                 </div>
-         
-              </p>
             </div>
           </div>
         </div>
@@ -77,11 +75,10 @@
                     <li><a href="https://www.linkedin.com/in/ashli-hanson-2689091b0/" target="_blank">LinkedIn</a></li>
                     <li><a href="https://github.com/ashlinhanson" target="_blank">GitHub</a></li>
                 </ul>
-            </p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
   </div>
 
   <!-- jQuery CDN -->
