removed disclaimer card from portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,8 +41,8 @@
   </nav>
   
   <div class="container">
-    <div class="row">
-      <div class="col-md-8">
+    <div class="row justify-content-center">
+      <div class="col-md-9">
         <div class="page-header">
         </div>
         <div class="col-md-9">
@@ -70,6 +70,7 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                   </a>
+                  <p class="portfolio-p">Someday this will have something worth looking at...</p>
                 </div>
               </div>
             </div>
@@ -78,17 +79,7 @@
       </div>
     </div>
 
-      <div class="col-md-4">
-        <div class="card mt-2">
-          <div class="card-body">
-            <h5 class="card-title">Disclaimer</h5>
-            <p class="card-text">
-                This will eventually showcase projects completed :)
-            </p>
-          </div>
-        </div>
-      </div>
-
+  
   
 
 </body>
