--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
   </nav>
 
   <div class="container">
-    <div class="row">
+    <div class="row justify-content-center">
       <div class="col-md-10">
         <div class="page-header">
         </div>
