--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <p>
                       My name is Ashli Hanson and I am an aspiring Full Stack web developer! I've spent the majority of my professional career in the service industry and customer service.
                       Most recently I was a manager for Summer Moon Coffee for 3 years at the Buda and Trailer locations. 
-                      Being a manager in a fast paced environment like a coffee shop really sharpened my problem solving skills and 
+                      Being a manager in a fast paced environment like a coffee shop really sharpened my problem solving skills and multitasking abilities. 
                     </p>
                   </div>
                 </div>
