changed portfolio layout just bones

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
   <title>Ashli Hanson</title>
 
-  <!-- Bootstrap CDN -->
+  <!-- Bootstrap and CSS links -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <!-- Start Nav -->
+  <!-- Nav bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#"> 
       <img src="../homework-two/navbarimg.png" style="display: inline-block; height: 75px; width: 75px" alt="logo">
@@ -38,7 +38,7 @@
       </ul>
     </div>
   </nav>
-  <!-- End Nav -->
+  <!-- About Me Card -->
   <div class="container">
     <div class="row">
       <div class="col-md-8">
@@ -65,7 +65,7 @@
           </div>
         </div>
       </div>
-      <!--Create Card taking up 4 Columns-->
+      <!--Links Card-->
       <div class="col-md-4">
         <div class="card mt-2">
           <div class="card-body">
