--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
       </ul>
     </div>
   </nav>
-
+<!--Contact Card-->
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-10">
@@ -74,5 +74,15 @@
     </div>
   </div>
 </div>
+
+<!-- jQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+
+<!-- Bootstrap JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+
   </body>
   </html>
