styled buttons, tried fixing portfolio layout

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
   <!-- About Me Card -->
   <div class="container">
     <div class="row">
-      <div class="col-md-8">
+      <div class="col-sm-8">
         <div class="page-header">
           <h1>Hey there!</h1>
         </div>
-        <div class="col-md-12">
+        <div class="col-sm-12">
           <div class="card mt-2">
             <div class="card-body">
               <p class="card-text">
@@ -66,7 +66,7 @@
         </div>
       </div>
       <!--Links Card-->
-      <div class="col-md-4">
+      <div class="col-sm-4">
         <div class="card mt-2">
           <div class="card-body">
             <h5 class="card-title">Where to find me</h5>
