--- a/portfolio.html
+++ b/portfolio.html
@@ -41,70 +41,70 @@
   </nav>
   <!--Portfolio-->
   <div class="container">
-    <div class="col-md-12">
+    <div class="col-sm-12">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-sm-4">
           <div class="card" style="width: 18rem;">
-            <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+            <img src="https://via.placeholder.com/150" class="card-img-top" alt="place holder image">
               <div class="card-body">
-                <h5 class="card-title">Future Project 1</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title">Future Project 4</h5>
+                <p class="card-text">to</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
           </div>
         </div>
-      <div class="col-md-4">
+      <div class="col-sm-4">
         <div class="card" style="width: 18rem;">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+          <img src="https://via.placeholder.com/150" class="card-img-top" alt="place holder image">
             <div class="card-body">
-              <h5 class="card-title">Future Project 2</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Future Project 5</h5>
+              <p class="card-text">show</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-sm-4">
         <div class="card" style="width: 18rem;">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+          <img src="https://via.placeholder.com/150" class="card-img-top" alt="place holder image">
             <div class="card-body">
-              <h5 class="card-title">Future Project 3</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Future Project 6</h5>
+              <p class="card-text">you</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
       </div>
     </div>
-  </div> 
-  <br><br>
+  </div>  
+  <br>
   <div class="container">
-    <div class="col-md-12">
+    <div class="col-sm-12">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-sm-4">
           <div class="card" style="width: 18rem;">
-            <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+            <img src="https://via.placeholder.com/150" class="card-img-top" alt="place holder image">
               <div class="card-body">
                 <h5 class="card-title">Future Project 4</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">to</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
           </div>
         </div>
-      <div class="col-md-4">
+      <div class="col-sm-4">
         <div class="card" style="width: 18rem;">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+          <img src="https://via.placeholder.com/150" class="card-img-top" alt="place holder image">
             <div class="card-body">
               <h5 class="card-title">Future Project 5</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">show</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-sm-4">
         <div class="card" style="width: 18rem;">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+          <img src="https://via.placeholder.com/150" class="card-img-top" alt="place holder image">
             <div class="card-body">
               <h5 class="card-title">Future Project 6</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">you</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
