--- a/contact.html
+++ b/contact.html
@@ -43,10 +43,10 @@
 <!--Contact Card-->
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-md-10">
+      <div class="col-sm-10">
         <div class="page-header">
         </div>
-        <div class="col-md-12">
+        <div class="col-sm-12">
           <div class="card mt-4">
             <div class="card-body">
               <p class="card-text">
