--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,9 @@
   <title>Ashli Hanson</title>
 
   <!-- Bootstrap CDN -->
+  <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Pontano+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
 </head>
@@ -17,7 +19,7 @@
 
 <body>
   <!-- Start Nav -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="#"> 
         <img src="../homework-two/navbarimg.png" style="display: inline-block; height: 75px; width: 75px" alt="logo">
         <span style="display: inline-block;"></span>
@@ -52,6 +54,9 @@
               <p class="card-text">
                 <div class="container-sm col-sm-12">
                   <h4>Lets Connect! </h4>
+                  <p>
+                    I would love to hear from you!
+                  </p>
                   <form>
                     <div class="form-group">
                       <label for="formGroupExampleInput">Name</label>
