--- a/portfolio.html
+++ b/portfolio.html
@@ -9,14 +9,16 @@
   <title>Ashli Hanson</title>
 
   <!-- Bootstrap and CSS links -->
+  <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Pontano+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="#"> 
       <img src="../homework-two/navbarimg.png" style="display: inline-block; height: 75px; width: 75px" alt="logo">
       <span style="display: inline-block;"></span>
@@ -40,77 +42,43 @@
     </div>
   </nav>
   <!--Portfolio-->
-  <div class="container">
-    <div class="col-sm-12">
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="card" style="width: 18rem;">
-            <img src="https://via.placeholder.com/150" class="card-img-top" alt="place holder image">
-              <div class="card-body">
-                <h5 class="card-title">Future Project 4</h5>
-                <p class="card-text">to</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-          </div>
-        </div>
-      <div class="col-sm-4">
+  
+<div class="container">
+  <div class="col-md-12">
+    <div class="row">
+      <div class="col-md-4">
         <div class="card" style="width: 18rem;">
           <img src="https://via.placeholder.com/150" class="card-img-top" alt="place holder image">
             <div class="card-body">
-              <h5 class="card-title">Future Project 5</h5>
-              <p class="card-text">show</p>
+                <h5 class="card-title">Future Project</h5>
+                <p class="card-text">Some day I</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card" style="width: 18rem;">
+          <img src="https://via.placeholder.com/150" class="card-img-top" alt="place holder image">
+            <div class="card-body">
+              <h5 class="card-title">Future Project</h5>
+              <p class="card-text">will have projects</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
       </div>
-      <div class="col-sm-4">
+      <div class="col-md-4">
         <div class="card" style="width: 18rem;">
           <img src="https://via.placeholder.com/150" class="card-img-top" alt="place holder image">
             <div class="card-body">
-              <h5 class="card-title">Future Project 6</h5>
-              <p class="card-text">you</p>
+              <h5 class="card-title">Future Project</h5>
+              <p class="card-text">to show you :)</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
       </div>
     </div>
-  </div>  
-  <br>
-  <div class="container">
-    <div class="col-sm-12">
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="card" style="width: 18rem;">
-            <img src="https://via.placeholder.com/150" class="card-img-top" alt="place holder image">
-              <div class="card-body">
-                <h5 class="card-title">Future Project 4</h5>
-                <p class="card-text">to</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-          </div>
-        </div>
-      <div class="col-sm-4">
-        <div class="card" style="width: 18rem;">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="place holder image">
-            <div class="card-body">
-              <h5 class="card-title">Future Project 5</h5>
-              <p class="card-text">show</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card" style="width: 18rem;">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="place holder image">
-            <div class="card-body">
-              <h5 class="card-title">Future Project 6</h5>
-              <p class="card-text">you</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-      </div>
-    </div>
-  </div>  
+  </div> 
+</div>
 
 
 <!-- jQuery CDN -->
