folio layouts/images, more bio, nav bar styling

--- a/contact.html
+++ b/contact.html
@@ -50,10 +50,10 @@
         </div>
         <div class="col-sm-12">
           <div class="card mt-4">
-            <div class="card-body">
+            <div class="card-body-contact">
               <p class="card-text">
                 <div class="container-sm col-sm-12">
-                  <h4>Lets Connect! </h4>
+                  <h1>Lets Connect! </h1>
                   <p>
                     I would love to hear from you!
                   </p>
@@ -79,6 +79,7 @@
     </div>
   </div>
 </div>
+
 
 <!-- jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
