--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="col-sm-12">
           <div class="card mt-2">
-            <div class="card-body">
+            <div class="card-body-index">
               <p class="card-text">
                 <div class="row">
                   <div class="col-md-5">
@@ -57,9 +57,23 @@
                   </div>
                   <div class="col-md-7">
                     <p>
-                      My name is Ashli Hanson and I am an aspiring Full Stack web developer! I've spent the majority of my professional career in the service industry and customer service.
-                      Most recently I was a manager for Summer Moon Coffee for 3 years at the Buda and Trailer locations. 
+                      My name is Ashli Hanson and I am an aspiring Full Stack web developer in Austin, Texas! 
+                      <br><br>
+                      I've spent the majority of my professional career in the service industry and customer service.
+                      Most recently I was a shop manager for Summer Moon Coffee for 3 years at the Buda and Trailer locations. 
                       Being a manager in a fast paced environment like a coffee shop really sharpened my problem solving skills and multitasking abilities. 
+                      <br><br>
+                      I have chosen a career in the developing world because I love the flexibility that it allows. 
+                      Using my brain and being challenged are very important to me but I also love having the option to be creative and design.
+                      <br><br>
+                      Another big draw to this industry is impact you have really have on the world.
+                      The ability to share information to anyone and everywhere is a gift that I take very seriously and cherish.
+                      I want to use these skills to share important information that should be easily accessible that isn't yet. 
+                      A good example of this would be information about local elections, candidates, representatives, propositions, ect all compiled in one place so voters can educate themselves appropriately.
+
+                      <br><br>
+                      Eventually, I would love to work fully remote with an oragnization I fully support so I can work while I travel to the national and state parks across the country. 
+                      
                     </p>
                   </div>
                 </div>
@@ -82,6 +96,9 @@
         </div>
       </div>
   </div>
+
+
+
 
   <!-- jQuery CDN -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
