--- a/portfolio.html
+++ b/portfolio.html
@@ -43,42 +43,80 @@
   </nav>
   <!--Portfolio-->
   
-<div class="container">
+<h1 class = "folioheader">Some things I can do</h1>
+<div class="container-folio">
   <div class="col-md-12">
     <div class="row">
       <div class="col-md-4">
-        <div class="card" style="width: 18rem;">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="place holder image">
+        <div class="card">
+          <img src="folioimg2inv.jpg" class="card-img-top" alt="place holder image">
             <div class="card-body">
                 <h5 class="card-title">Future Project</h5>
                 <p class="card-text">Some day I</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Check it out</a>
             </div>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card" style="width: 18rem;">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="place holder image">
+        <div class="card">
+          <img src="folioimg3.jpg" class="card-img-top" alt="place holder image">
             <div class="card-body">
               <h5 class="card-title">Future Project</h5>
               <p class="card-text">will have projects</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Check it out</a>
             </div>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card" style="width: 18rem;">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="place holder image">
+        <div class="card">
+          <img src="folioimg2.jpg" class="card-img-top" alt="place holder image">
             <div class="card-body">
               <h5 class="card-title">Future Project</h5>
               <p class="card-text">to show you :)</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Check it out</a>
             </div>
         </div>
       </div>
     </div>
   </div> 
 </div>
+<div class="container-folio">
+  <div class="col-md-12">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card">
+          <img src="folioimg6inv.jpg" class="card-img-top" alt="place holder image">
+            <div class="card-body">
+                <h5 class="card-title">Future Project</h5>
+                <p class="card-text">Some day I</p>
+                <a href="#" class="btn btn-primary">Check it out</a>
+            </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <img src="folioimg7.jpg" class="card-img-top" alt="place holder image">
+            <div class="card-body">
+              <h5 class="card-title">Future Project</h5>
+              <p class="card-text">will have projects</p>
+              <a href="#" class="btn btn-primary">Check it out</a>
+            </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <img src="folioimg6.jpg" class="card-img-top" alt="place holder image">
+            <div class="card-body">
+              <h5 class="card-title">Future Project</h5>
+              <p class="card-text">to show you :)</p>
+              <a href="#" class="btn btn-primary">Check it out</a>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div> 
+</div>
+
 
 
 <!-- jQuery CDN -->
