--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Pontano+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -66,11 +67,9 @@
                       I have chosen a career in the developing world because I love the flexibility that it allows. 
                       Using my brain and being challenged are very important to me but I also love having the option to be creative and design.
                       <br><br>
-                      Another big draw to this industry is impact you have really have on the world.
-                      The ability to share information to anyone and everywhere is a gift that I take very seriously and cherish.
-                      I want to use these skills to share important information that should be easily accessible that isn't yet. 
-                      A good example of this would be information about local elections, candidates, representatives, propositions, ect all compiled in one place so voters can educate themselves appropriately.
-
+                      Another big draw to this career is impact developers really have on the world.
+                      The ability to share information to anyone and everywhere is a gift that I'm excited to work on and take seriously.
+                      I want to use these skills to share important information that should be easily accessible.
                       <br><br>
                       Eventually, I would love to work fully remote with an oragnization I fully support so I can work while I travel to the national and state parks across the country. 
                       
@@ -96,6 +95,12 @@
         </div>
       </div>
   </div>
+
+  <div class="footer">
+    <a href="https://www.instagram.com/ashlihanson/?hl=en" target="_blank" class="fa fa-instagram"></a>
+    <a href="https://www.linkedin.com/in/ashli-hanson-2689091b0/" target="_blank" class="fa fa-linkedin"></a>
+  </div>
+ 
 
 
 
